# raspberrypi_cross_compilation_sdk

./: BUILD.gn  README.md
example/: BUILD.gn  another_example.c  another_example.h  example.cc
tools/: setup_gn.sh  setup_sdk.sh
