
static_library("contrived_example_of_static_library") {
  sources = [
    "example.cc",
    "another_example.h",
    "another_example.c",
  ]
}

executable("example") {
  deps = [
    ":contrived_example_of_static_library"
  ]

  libs = [
    "rt",
    "pthread",
    "dl",
    "bcm_host",
    "vcos",
    "vchiq_arm",
  ]
}
