static_library("contrived_example_of_static_library") {
  sources = [
    "another_example.c",
    "another_example.h",
    "example.cc",
  ]
}

executable("example") {
  deps = [
    ":contrived_example_of_static_library",
  ]

  libs = [
    "rt",
    "pthread",
    "dl",
    "bcm_host",
    "vcos",
    "vchiq_arm",
  ]
}
